<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BGM</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_collection">My Collection</string>
    <string name="title_activity_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_random">Random</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_record">Record Game Play</string>
    <string name="title_activity_board_game_detail">Game Details</string>
    <string name="title_activity_sort">Sort By</string>
    <string name="title_activity_random_game">Random Game</string>
    <string name="filter_cancel">Cancel</string>
    <string name="filter_apply">Apply</string>
    <string name="sort_byname">Name</string>
    <string name="sort_byrating">Rating</string>
    <string name="sort_byyrpub">Year Published</string>
    <string name="search_byname"> Game Name </string>
    <string name="search_collection"> Games in Collection </string>
    <string name="search_all"> All Games </string>
    <string name="location">Location</string>
    <string name="address_hint">Street Address</string>
    <string name="citystate_hint">City, State</string>
    <string name="country_hint">Country</string>

    <string-array name="alpha_array">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>None</item>
    </string-array>
    <string-array name="rating_array">
        <item>Highest First</item>
        <item>Lowest First</item>
        <item>None</item>
    </string-array>
    <string-array name="year_array">
        <item>Latest First</item>
        <item>Earliest First</item>
        <item>None</item>
    </string-array>
    <string-array name="filter_player_count_array">
        <item>Select...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>
    <string-array name="filter_play_time_array">
        <item>Select...</item>
        <item>15 minutes</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
        <item>150</item>
        <item>180+</item>
    </string-array>
    <string-array name="filter_age_group_array">
        <item>Select...</item>
        <item>5+</item>
        <item>7+</item>
        <item>9+</item>
        <item>12+</item>
        <item>14+</item>
        <item>16+</item>
        <item>18+</item>
    </string-array>
    <string-array name="filter_mechanic_array">
        <item>Select...</item>
        <item>Hand Management</item>
        <item>Secret Unit Deployment</item>
        <item>Variable Play Powers</item>
        <item>Drafting</item>
        <item>Engine Building</item>
        <item>Worker Placement</item>
    </string-array>
    <string-array name="filter_category_array">
        <item>Select...</item>
        <item>Bluffing</item>
        <item>Card Game</item>
        <item>Science Fiction</item>
        <item>Economic</item>
        <item>Simulation</item>
    </string-array>
    <string-array name="filter_rating_array">
        <item>Select...</item>
        <item>3+</item>
        <item>4+</item>
        <item>5+</item>
        <item>6+</item>
        <item>7+</item>
        <item>8+</item>
        <item>9+</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_search">Search By</string>
    <string name="title_activity_record_play">RecordPlayActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>
