<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brickedphoneclub.boardgamecollectionmanager.MainCollectionActivity">

 <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:orderInCategory="100"
        android:showAsAction="never" />
 <item android:id="@+id/action_random"
        android:title="@string/action_random"
        android:orderInCategory="200"
        android:showAsAction="never" />
 <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="3"
        android:showAsAction="never" />
 <item android:id="@+id/action_record"
        android:title="@string/action_record"
        android:orderInCategory="4"
        android:showAsAction="never" />
 <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="4"
        android:showAsAction="never" />
 <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="4"
        android:showAsAction="never" />
 <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="5"
        android:showAsAction="never" />

</menu>
