<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/record_map"
tools:context="com.brickedphoneclub.boardgamecollectionmanager.MapsActivity"
android:name="com.google.android.gms.maps.SupportMapFragment" >


<TextView
    android:id="@+id/tv_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_centerVertical="true"
    android:layout_alignStart="@+id/map"
    android:layout_alignLeft="@+id/map"/>

<fragment
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_below="@+id/locTitleText"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/locTitleText"
    android:text="@string/location"
    android:textIsSelectable="false"
    android:textSize="30sp"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/map"
    android:layout_alignLeft="@+id/map"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPostalAddress"
    android:ems="10"
    android:id="@+id/record_street_address_field"
    android:hint="@string/address_hint"
    android:layout_below="@+id/tv_location"
    android:layout_alignEnd="@+id/map"
    android:layout_alignRight="@+id/map" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPostalAddress"
    android:ems="10"
    android:id="@+id/record_citystate_field"
    android:hint="@string/citystate_hint"
    android:layout_below="@+id/record_street_address_field"
    android:layout_alignStart="@+id/record_street_address_field"
    android:layout_alignLeft="@+id/record_street_address_field"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPostalAddress"
    android:ems="10"
    android:id="@+id/record_country_field"
    android:hint="@string/country_hint"
    android:layout_below="@+id/record_citystate_field"
    android:layout_alignStart="@+id/record_citystate_field"
    android:layout_alignLeft="@+id/record_citystate_field"/>

<!-- class="com.google.android.gms.maps.SupportMapFragment" -->

</RelativeLayout>