<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brickedphoneclub.boardgamecollectionmanager.SearchActivity">

    <TextView
        android:id="@+id/lbl_searchByName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/search_byname"
        android:background="@color/light_gray"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_searchByName"
        android:layout_below="@id/lbl_searchByName"
        android:layout_marginTop="20dp"
        android:ems="17"
        android:hint="e.g Risk"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgbtn_gamName"
        android:padding="5dp"
        android:layout_gravity="center"
        android:background="@android:drawable/ic_delete"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/lbl_searchByName"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txt_searchByName"/>

    <RadioGroup
        android:id="@+id/radioSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt_searchByName">


        <RadioButton
            android:id="@+id/radioSearchCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_collection"
            android:background="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioSearchAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_all"
            android:background="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_marginTop="15dp"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/btn_search"
        android:layout_below="@id/radioSearch"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAlignment="center"
        android:background="@color/light_gray"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />



</RelativeLayout>
