<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brickedphoneclub.boardgamecollectionmanager.SortActivity">


    <RadioGroup
        android:id="@+id/radioSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <RadioButton
            android:id="@+id/radioByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/sort_byname"
            android:background="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:checked="true"
            android:layout_marginTop="25dp"
            android:onClick="onRadioButtonClicked"/>

         <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnr_sortbyname"
            android:layout_below="@id/radioByName"
            android:layout_marginTop="15dp"/>



        <RadioButton
            android:id="@+id/radioByrating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnr_sortbyname"
            android:layout_alignParentLeft="true"
            android:text="@string/sort_byrating"
            android:background="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:onClick="onRadioButtonClicked"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/spnr_sortbyrating"
            android:layout_below="@id/radioByrating"
            android:layout_marginTop="15dp"/>


        <RadioButton
            android:id="@+id/radioByYrpub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnr_sortbyrating"
            android:layout_alignParentLeft="true"
            android:text="@string/sort_byyrpub"
            android:background="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:onClick="onRadioButtonClicked"/>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnr_sortbyyear"
            android:layout_below="@id/radioByrating"
            android:layout_marginTop="15dp" />



    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/btn_sortcancel"
        android:layout_below="@id/radioSort"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAlignment="center"
        android:background="@color/light_gray"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply  "
        android:id="@+id/btn_sortapply"
        android:layout_below="@id/radioSort"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAlignment="center"
        android:background="@color/light_gray"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="55dp"/>

</RelativeLayout>
